FE/src/app/components/navigation/header/header.component.scss
a {
    text-decoration: none;
    color: white;
}

a:hover, a:active{
    color: lightgray;
}

.navigation-items{
    list-style-type: none;
    padding: 0;
    margin: 0;
}

mat-toolbar{
    border-radius: 3px;
}

@media(max-width: 850px){
    mat-toolbar{
        border-radius: 1px;
        
    }
    .spacer  {
        flex: 0.6 0.6 auto;
    }
    .nav-header {
        
        text-align: center;
        width: 100%;
        
        
    }
    

    
}

@media screen and (min-width: 850px) {
    .spacer {
        flex: 0.45 0.45 auto;
    }
    
  }
.nav-item {
    padding-left: 15px;
    padding-right: 15px;
    padding-top: 5px;
    padding-bottom: 5px;
    border-right: solid white;
    border-width: 1px;
}
.user-button {
    vertical-align: middle;
    
}
h1 {
    margin-top: 3px;
    
}

.main-toolbar {
    border-radius: 0;
    min-width: fit-content;
    width: 100%;
}
 
 

